added mouse shit and velocity to sat

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Assets\Scripts\RectPhysObj.cs" />
     <Compile Include="Assets\Scripts\SATPhysObj.cs" />
     <Compile Include="Assets\Scripts\SATMainPhysics.cs" />
+    <Compile Include="Assets\Scripts\mousescriptthing.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
