did some astar stuff

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,13 +56,17 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\AIscript.cs" />
     <Compile Include="Assets\Scripts\mousescriptthing.cs" />
     <Compile Include="Assets\Scripts\mainphysics.cs" />
     <Compile Include="Assets\Scripts\PhysicsObject.cs" />
     <Compile Include="Assets\Scripts\RectPhysObj.cs" />
     <Compile Include="Assets\Scripts\SATPhysObj.cs" />
     <Compile Include="Assets\Scripts\SATMainPhysics.cs" />
-    <Compile Include="Assets\Scripts\AIscript.cs" />
+    <Compile Include="Assets\Scripts\Astargridscript.cs" />
+    <Compile Include="Assets\Scripts\Node.cs" />
+    <Compile Include="Assets\Scripts\Obstacle.cs" />
+    <Compile Include="Assets\Scripts\Obstacles.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
