--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,7 +58,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\AIscript.cs" />
     <Compile Include="Assets\Scripts\Node.cs" />
-    <Compile Include="Assets\SelfDestruct.cs" />
+    <Compile Include="Assets\Scripts\SelfDestruct.cs" />
     <Compile Include="Assets\Scripts\Path.cs" />
     <Compile Include="Assets\Scripts\mousescriptthing.cs" />
     <Compile Include="Assets\Scripts\mainphysics.cs" />
@@ -75,6 +75,9 @@
     <Compile Include="Assets\Scripts\SATMainPhysics.cs" />
     <Compile Include="Assets\Scripts\Obstacle.cs" />
     <Compile Include="Assets\Scripts\weapon.cs" />
+    <Compile Include="Assets\Bullet.cs" />
+    <Compile Include="Assets\Scripts\DamageCheck.cs" />
+    <Compile Include="Assets\Scripts\Damageobj.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
