--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -71,13 +71,15 @@
     <Compile Include="Assets\Scripts\Astargridscript.cs" />
     <Compile Include="Assets\Scripts\Obstacles.cs" />
     <Compile Include="Assets\Scripts\pathfinder.cs" />
-    <Compile Include="Assets\Scripts\Playerscript.cs" />
+    <Compile Include="Assets\Scripts\Player\Playerscript.cs" />
     <Compile Include="Assets\Scripts\Heap.cs" />
     <Compile Include="Assets\Scripts\SATPhysObj.cs" />
     <Compile Include="Assets\Scripts\Damageobj.cs" />
     <Compile Include="Assets\Scripts\SATMainPhysics.cs" />
     <Compile Include="Assets\Scripts\Obstacle.cs" />
-    <Compile Include="Assets\Scripts\weapon.cs" />
+    <Compile Include="Assets\Scripts\Player\weapon.cs" />
+    <Compile Include="Assets\Scripts\Enemy weapons\Standardshot.cs" />
+    <Compile Include="Assets\Scripts\Enemy weapons\Targetedshot.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
